--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,10 @@ hs_err_pid*
 .idea/
 .gradle/
 build/
+src/.DS_Store
+src/main/.DS_Store
+src/main/java/.DS_Store
+src/main/java/com/.DS_Store
+src/main/java/com/malli/.DS_Store
+src/test/.DS_Store
+.DS_Store
